# gpt-cat

./: Cargo.toml  Dockerfile  Dockerfile_database  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  database.yml  main.yml
.sqlx/: query-14b776d31582a4a1912ac361373f24d1fcccfdf0cb196b0efb9754e40d9a5afc.json  query-1bc7c3b59b5fc996c17c410c53200c15b282016294641a63e118e7edf29dd390.json  query-228fd0bbe2adc69f6374ce9a6c24955772a15d769a594bca955f3c83a557fed0.json  query-330e3612168950293aaf0420dda9a08777af422aa9b8a500d1aea8b3ffc82da1.json  query-38ec66582971343b1ec81df84239acb4f09510390340d7526234d0690613c7e0.json  query-500af58aa3fa561c010385b954e7da0ec65d9e03ab1f7ca02402b6b635c5c3a7.json  query-54faa258e53dac48c3f3e17fe32d5a311aadc6c39b88d9606ed3399234019a5b.json  query-61dc82232f5bb3fa7fdd2a211c4de0f62da76a998def6f4256075bf9679126d1.json  query-8340068177584f4906a42c3c5265f5c9d07bc219c1745d95b27006537c076b52.json  query-843c506885c926d7b3dd0589dba7ddfe73411f3ed00961ac931e70f8ec855950.json  query-89ae28041a78927017c8bc63c837f7e56f2dc2e509c227a3da723be41d88d9ae.json  query-91024885e7548de4d10790a82cfb8ddc9df26d1c7a4ebd27421436c60abad316.json  query-a38a9cb3ce45939ae0d2361f614b1f02b97811f256d50ebd99f1ea09e2c50f1a.json  query-c07fd88fbec2fc8992418d22796ca9ad95bc7f1c2a50fd25ae1197a5e86f9b37.json  query-c1ece5829e272ad65599f164a9cd8394c05b0837363a199b430de4c5446d1e00.json  query-ce881f4726907bd1b51f2944cb78d579f419f1820490e01c04f92ce0b130490f.json  query-e7628edddb2256fd36628a86cd10da7934e9a1c943089fe0b09e4e04e089e3a1.json  query-e91e64deb2bb2335dbaf23b92a272d168c8d19255a30f9320b5d21e201b0f475.json  query-f63840184f32d9da5486e7c23e2da117d00d974c7c631e6246e2db031a8fd1b8.json  query-fca585db35f6e8b8753b6941f8d8a1cf8f931d5d1a1901946cee77ee3b98c5ff.json
cat-macro/: Cargo.toml
cat-macro/src/: lib.rs  new_keyword.rs  type_wrapper.rs
config/: config.json  model.json  model_price.json
sql/: cmd.sql  init.sql  main.sql
src/: main.rs
src/cmd/: hot_reload.rs  mod.rs  utils.rs
src/commandline/: hot_reload.rs  mod.rs
src/commandline/handlers/: command_listener.rs  describer.rs  dispatcher.rs  macros.rs  mod.rs
src/commandline/handlers/command/: add_user.rs  edit_balance.rs  list_account.rs  list_model.rs  manage_account_pool.rs  mod.rs  search_balance.rs  search_user.rs
src/data/: mod.rs
src/data/alibaba/: mod.rs  qian_wen_request.rs
src/data/config/: config_file.rs  config_helper.rs  endpoint.rs  mod.rs  model_manager.rs  model_price.rs  runtime_data.rs
src/data/config/entity/: config_file.rs  endpoint.rs  mod.rs  model_manager.rs  model_mapping.rs  model_price.rs  runtime_data.rs
src/data/database/: database_manager.rs  mod.rs
src/data/database/entities/: account_list.rs  chat_list.rs  mod.rs  prelude.rs  private_command.rs  public_command.rs  usage_list.rs  user.rs  user_usage.rs
src/data/database/entity/: data_base_account.rs  mod.rs  usage_list.rs  user.rs  user_command.rs  user_usage.rs
src/data/http_api/: mod.rs
src/data/http_api/alibaba/: mod.rs  qian_wen_request.rs  qian_wen_response.rs
src/data/http_api/openai/: mod.rs  openai_stream_response.rs  openai_sync_response.rs
src/data/openai_api/: mod.rs  openai_request.rs  openai_stream_response.rs  openai_sync_response.rs
src/http/: mod.rs
src/http/client/: client.rs  mod.rs
src/http/client/client_sender/: channel_manager.rs  mod.rs
src/http/client/specific_responder/: macros.rs  mod.rs  openai_responder.rs  qianwen_responder.rs
src/http/client/util/: account_manager.rs  get_reqwest_client.rs  mod.rs  truncated_json_processor.rs
src/http/client/util/counter/: concurrency_pool.rs  counter.rs  mod.rs
src/http/client/util/sse/: mod.rs  rayon_json_processor.rs  sse_processor.rs  truncated_json_processor.rs
src/http/server/: mod.rs
src/http/server/after_handler/: mod.rs  token_meter.rs
src/http/server/pre_handler/: command_handler.rs  mod.rs  model_filter.rs  title_catcher.rs  user_key_handler.rs  userid_handler.rs
src/http/server/pre_handler/command/: command_handler.rs  mod.rs
src/http/server/pre_handler/command/handlers/: balance_inquiry.rs  mod.rs  say_hi.rs  show_price.rs  template.rs
src/http/server/pre_handler/dispatcher/: mod.rs  pre_handler_dispatcher.rs
src/http/server/pre_handler/macros/: impl_macro.rs  mod.rs
src/http/server/web/: enum_response.rs  mod.rs  server.rs
src/new_cmd/: hot_reload.rs
src/new_cmd/handlers/: command_listener.rs  dispatcher.rs  macros.rs  mod.rs
src/new_cmd/handlers/command/: add_user.rs  edit_balance.rs  list_account.rs  manage_account_pool.rs  mod.rs  search_balance.rs  search_user.rs
