[package]
name = "gpt-cat"
authors = ["Anivie"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
cat-macro = { path = "./cat-macro" }

time = "0.3.37"
thiserror = "2.0.4"

async-stream = "0.3.6"
tokio-util = "0.7.13"

bytes = "1.9.0"
rustls = "0.23.19"
rustls-pemfile = "2.2.0"

log = "0.4.22"
fast_log = { version = "1.7.6", features = ["lz4"] }
colored = "2.1.0"
color-eyre = { version = "0.6.3", default-features = false }
rustyline = "15.0.0"

parking_lot = { version = "0.12.3", features = ["send_guard"] }
hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }

strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
notify = "7.0.0"
rayon = "1.10.0"

uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.9.0-beta.0"

tiktoken-rs = "0.6.0"
anyhow = "1.0.93"
base64 = "0.22.1"

futures = "0.3.31"
futures-util = "0.3.30"

mime = "0.3.17"
rust_decimal = "1.36.0"

ntex-cors = "2.0.0"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "time", "rust_decimal"]

[dependencies.sqlx-postgres]
version = "0.8.2"
features = ["json", "migrate"]

[dependencies.ntex]
version = "2.9.0"
features = ["tokio", "tls-rustls", "rustls", "compress"]

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["gzip", "deflate", "brotli", "json", "stream", "socks", "rustls-tls"]