[package]
name = "gpt-cat"
authors = ["Anivie"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
cat-macro = { path = "./cat-macro" }

time = "0.3.41"
thiserror = "2.0.12"

bytes = "1.10.1"
rustls = "0.23.27"
rustls-pemfile = "2.2.0"

log = "0.4.27"
fast_log = { version = "1.7.7", features = ["lz4"] }
colored = "3.0.0"
color-eyre = { version = "0.6.4", default-features = false }
rustyline = "15.0.0"

parking_lot = { version = "0.12.3", features = ["send_guard"] }
hashbrown = { version = "0.15.3", features = ["rayon", "serde"] }

strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
notify = "8.0.0"
rayon = "1.10.0"

uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.1"

tiktoken-rs = "0.7.0"
anyhow = "1.0.98"
base64 = "0.22.1"

futures = "0.3.31"
futures-util = "0.3.31"

mime = "0.3.17"
rust_decimal = "1.37.1"

ntex-cors = "2.0.0"

mimalloc = "0.1.46"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "time", "rust_decimal"]

[dependencies.sqlx-postgres]
version = "0.8.3"
features = ["json", "migrate"]

[dependencies.ntex]
version = "2.12.4"
features = ["tokio", "tls-rustls", "rustls", "compress"]

[dependencies.tokio]
version = "1.45.1"
features = ["full"]

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["gzip", "deflate", "brotli", "json", "stream", "socks", "rustls-tls"]
